Fix the parsing and re-serialization of :lang pseudo class selector when it has multiple arguments with same value https://bugs.webkit.org/show_bug.cgi?id=139013

Patch by Dhi Aurrahman <diorahman@rockybars.com> on 2014-11-24
Reviewed by Benjamin Poulain.

Source/WebCore:

Fix the parsing and re-serialization of :lang pseudo class selector when
it has multiple arguments with same value e.g. :lang(en, en, en). Previously,
given :lang(en, en, en) selector, it was parsed and reserialized
as :lang(enenen) instead of :lang(en, en, en)

Related test on parsing and re-serialization of css selectors is updated.

* css/CSSSelector.cpp:
(WebCore::appendArgumentList):

LayoutTests:

Updated tests to verify the parsing and serialization of :lang pseudo class
selector when it has multiple arguments with same value.

* fast/css/css-selector-text-expected.txt: Updated to cover fix.
* fast/css/css-selector-text.html: Updated to cover fix.

Canonical link: https://commits.webkit.org/156914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176535 268f45cc-cd09-0410-ab3c-d52691b4dbfc